versioned_docs/version-0.13/guides/faq.mdx
# FAQ

<div className="faq-page">

### Getting Started

<span id="do-i-need-a-reddit-api-key-client-id-or-client-secret-to-build-with-devvit"></span>
<details>
<summary>Do I need a Reddit API key, client ID, or client secret to build with Devvit?</summary>

No. If you're building a Devvit app, you don't need to create a traditional Reddit app at [`reddit.com/prefs/apps`](https://www.reddit.com/prefs/apps) or manage API keys yourself.

Instead, start from the [App quickstart](../quickstart/quickstart.md) or create a project at [developers.reddit.com/new](https://developers.reddit.com/new). During setup, you sign in with your Reddit account and connect it to Reddit developers. Devvit handles authentication for your app.

To read or write Reddit content from a Devvit app, enable the Reddit capability described in the [Reddit API Overview](../capabilities/server/reddit-api.mdx).

:::note
If you're building an external script, bot, or website outside Devvit, that's a different authentication flow from the one documented here.
:::

</details>

<span id="where-do-i-start-building-a-devvit-app"></span>
<details>
<summary>Where do I start building a Devvit app?</summary>

The fastest path is the [App quickstart](../quickstart/quickstart.md), which walks you through creating a project, connecting your Reddit account, and starting a playtest environment.

If you already know what you want to build, you can also start with:

- [Quickstart for Games](../quickstart/quickstart.md)
- [Quickstart for Mod Tools](../quickstart/quickstart-mod-tool.md)
- [Quickstart for Unity](../quickstart/quickstart-unity.mdx)
- [Quickstart for GameMaker](../quickstart/quickstart-gamemaker.mdx)

</details>

<span id="how-do-i-log-in-and-how-do-i-know-i-am-authenticated"></span>
<details>
<summary>How do I log in, and how do I know I am authenticated?</summary>

Use the CLI to sign in with your Reddit account:

```bash
npx devvit login
```

To confirm which account is currently authenticated, run:

```bash
npx devvit whoami
```

After login, Devvit stores your access token locally at `~/.devvit/token` and refreshes it automatically while you use the CLI.

For command details, see the [`devvit login`](./tools/devvit_cli.mdx#devvit-login) and [`devvit whoami`](./tools/devvit_cli.mdx#devvit-whoami) sections of the CLI reference.

</details>

### Building and Testing

<span id="can-i-test-locally-without-uploading-to-reddit"></span>
<details>
<summary>Can I test locally without uploading to Reddit?</summary>

Not completely. Devvit apps run against Reddit, so the normal development flow uses a playtest subreddit rather than a purely local setup.

The quickstart uses `npm run dev`, which starts a Devvit playtest session for you. If you need more control over that flow, see [Playtest](./tools/playtest.md).

If you're wondering why a purely local setup isn't enough, the quickstart calls this out directly: backend calls don't work when you test the app only locally.

</details>

<span id="why-does-npm-run-dev-playtest-upload-or-install-fail"></span>
<details>
<summary>Why does <code>npm run dev</code>, playtest, upload, or install fail?</summary>

Most development errors fall into a few buckets:

- Authentication: make sure you're logged in with `npx devvit login`, then verify the current account with `npx devvit whoami`.
- Build output mismatch: if Devvit can't find `config.server.entry`, check that your built server file matches the path in `devvit.json`, and that your server build outputs a CommonJS bundle. The best references are [Devvit configuration](../capabilities/devvit-web/devvit_web_configuration.md) and [Vite](./tools/vite.mdx).
- Config validation: if `devvit.json` complains about invalid fields, extra properties, or settings shapes, validate it against the schema and configuration rules in [Devvit configuration](../capabilities/devvit-web/devvit_web_configuration.md).
- Fetch or domain errors: if fetch is disabled or a domain is rejected, configure `permissions.http` correctly and review the rules in [HTTP fetch](../capabilities/server/http-fetch.mdx).
- Runtime failures during playtest or install: use [Playtest](./tools/playtest.md) and [Logs and Debugging](./tools/logs.md) together so you can see the failing endpoint or trigger.

One other common gotcha: Devvit projects use `vite build --watch` rather than a normal `vite dev` server. The [Vite guide](./tools/vite.mdx) explains the expected setup.

</details>

<span id="how-do-i-update-the-devvit-cli"></span>
<details>
<summary>How do I update the Devvit CLI?</summary>

Prefer updating the project-local CLI dependency instead of relying on a global install. Update `devvit` in your project, then run `npx devvit update app` so your `@devvit` packages match the CLI.

For the current commands and workflow, see [Devvit CLI](./tools/devvit_cli.mdx) and the update notes in [Changelog](../changelog.md).

</details>

<span id="how-do-i-update-my-app-version"></span>
<details>
<summary>How do I update my app version?</summary>

Updating the CLI and publishing a new app version are separate steps. Your app version changes when you publish: `npx devvit publish` creates the next launch version, and you can control that with `--bump` or `--version` as described in [Launch your app](./launch/launch-guide.md).

After that, the subreddit still needs to be on the version you want installed. Publishing a new version doesn't automatically update every subreddit. Use [`devvit install`](./tools/devvit_cli.mdx#devvit-install) or open your app in the [App Directory](https://developers.reddit.com/apps/) and, under **Installed in communities**, use the blue **Update** button for the subreddit that's out of date.

</details>

<span id="i-published-and-it-says-a-new-devvit-version-is-available-do-i-need-to-upgrade"></span>
<details>
<summary>I published and it says a new Devvit version is available. Do I need to upgrade?</summary>

Not necessarily. If you're within 2–3 versions of the current Devvit release, your app will continue working as-is. The version notice is informational — it doesn't mean your app is broken or blocked from publishing.

Staying reasonably current is good practice, though. It gets you access to the latest fixes and capabilities. When you're ready, run `npx devvit update app` to bring your project's `@devvit` packages in line with the latest CLI, then test in playtest before publishing the update.

For upgrade steps, see [Devvit CLI](./tools/devvit_cli.mdx) and the [Changelog](../changelog.md).

</details>

<span id="what-is-the-difference-between-devvit-upload-and-devvit-publish"></span>
<details>
<summary>What is the difference between <code>npx devvit upload</code> and <code>npx devvit publish</code>?</summary>

Use `npx devvit upload` when you want a private uploaded build for yourself, and use `npx devvit publish` when you're ready to submit a version for launch review. In practice, playtest is still the normal dev loop, `upload` is useful for a private installable build, and `publish` is the launch step documented in [Launch your app](./launch/launch-guide.md).

For command syntax, see [Devvit CLI](./tools/devvit_cli.mdx). For the review and launch flow, see [Launch your app](./launch/launch-guide.md).

</details>

<span id="why-does-devvit-upload-say-assets-uploaded-then-you-must-be-logged-in"></span>
<details>
<summary>Why does <code>npx devvit upload</code> say assets uploaded, then fail with "You must be logged in to upload a new app version"?</summary>

This usually means your local Devvit authentication state is stale or corrupted. The asset upload can finish before the CLI fails while creating the new app version.

Reset your local Devvit auth state, then log in again.

On Windows PowerShell:

```powershell
npx devvit logout
Remove-Item -Recurse -Force "$env:USERPROFILE\.devvit"
npx devvit login
```

On macOS, Linux, or WSL:

```bash
npx devvit logout
rm -rf ~/.devvit
npx devvit login
```

After logging in, run `npx devvit whoami` to confirm the CLI is using the expected Reddit account, then try `npx devvit upload` again.

</details>

<span id="what-should-i-do-after-playtest-when-i-am-ready-to-launch"></span>
<details>
<summary>What should I do after playtest when I am ready to launch?</summary>

Before launch, make sure the app is stable across mobile and web, test with multiple accounts, and add the required app [`README.md`](../devvit_rules.md#app-readme-requirements). Then follow the publish flow in [Launch your app](./launch/launch-guide.md).

If you're just ending a playtest session, remember that the latest playtest install remains in place until you change installs. [Playtest](./tools/playtest.md) and [`devvit install`](./tools/devvit_cli.mdx#devvit-install) cover that handoff.

</details>

<span id="how-long-does-it-take-to-get-my-app-published"></span>
<details>
<summary>How long does it take to get my app published?</summary>

Most app versions are reviewed within **1–2 business days**. New apps or versions that include higher-risk features may take longer. Features that commonly extend review time:

- **Payments**: apps using the payments capability go through additional policy review.
- **`runAs: 'USER'`**: user action permissions require explicit approval as part of the review.
- **External fetch domains**: new domain requests are reviewed separately under the same **1–2 business day** target, though requests with policy ambiguity may take longer (see [HTTP Fetch](../capabilities/http-fetch.md)).

To keep review moving:

- Make sure your app [`README.md`](../devvit_rules.md#app-readme-requirements) is clear, accurate, and up to date.
- Ensure your app complies with the [Devvit Rules](../devvit_rules.md).
- If your app uses fetch domains, document them in a "Fetch Domains" section of your [README](../devvit_rules.md#app-readme-requirements).

If you haven't heard back after a week, reach out in the [Devvit Discord](https://developers.reddit.com/discord) or via [r/Devvit Modmail](https://www.reddit.com/message/compose/?to=r/Devvit). For the full publish flow, see [Launch your app](./launch/launch-guide.md).

</details>

<span id="how-do-i-install-my-app-on-another-subreddit"></span>
<details>
<summary>How do I install my app on another subreddit?</summary>

If you moderate the destination subreddit, use [`devvit install`](./tools/devvit_cli.mdx#devvit-install) to install a specific app or version on that community. That's the direct CLI path when you want to move beyond the playtest subreddit or test on another subreddit you control.

If the goal is broader distribution, follow [Launch your app](./launch/launch-guide.md) so moderators can install the approved app in the appropriate way for its visibility level.

</details>

<span id="what-is-the-difference-between-unlisted-and-public-apps"></span>
<details>
<summary>What is the difference between unlisted and public apps?</summary>

Published apps are unlisted by default. That's usually the right fit for games and single-community tools. If you want your app to appear in the App Directory so any moderator can install it, use `npx devvit publish --public` and follow the listing guidance in [Launch your app](./launch/launch-guide.md).

All apps submitted for review should look launch-ready: the launch docs require an app [`README.md`](../devvit_rules.md#app-readme-requirements), and game launch guidance expects a custom launch or first screen rather than a rough default experience.

</details>

### App Features

<span id="what-is-an-interactive-post-in-devvit"></span>
<details>
<summary>What is an interactive post in Devvit?</summary>

An interactive post is a Reddit post created for an app experience rather than a plain text-only post. That means creating the post with `reddit.submitCustomPost()` and defining how it launches through entry points, launch screens, and optional `postData`. See [Interactive posts overview](../capabilities/interactive-posts/interactive_posts_overview.mdx) and [Creating a custom post](../capabilities/creating_custom_post.md).

</details>

<span id="why-is-my-post-just-text-instead-of-an-interactive-app-post"></span>
<details>
<summary>Why is my post just text instead of an interactive app post?</summary>

If you call `submitPost()` with normal `text`, you're creating a regular Reddit post. To create an interactive app post, use `submitCustomPost()` and point it at your configured entry point instead. The [Interactive posts overview](../capabilities/interactive-posts/interactive_posts_overview.mdx) is the clearest starting point for that distinction.

</details>

<span id="what-is-devvit-web"></span>
<details>
<summary>What is Devvit Web?</summary>

Devvit Web is the current client/server app model for building Devvit apps with standard web tools like React, Phaser, or Three.js. It's a normal web app plus server endpoints plus `devvit.json` configuration, with Reddit capabilities split between client APIs, server APIs, and config. See [Devvit Web overview](../capabilities/devvit-web/devvit_web_overview.mdx).

</details>

<span id="i-got-a-notice-that-blocks-is-deprecated-what-do-i-need-to-do"></span>
<details>
<summary>I got a notice that Blocks is deprecated. What do I need to do?</summary>

Blocks is being replaced by [Devvit Web](../capabilities/devvit-web/devvit_web_overview.mdx). The path depends on how your app is built, but here's what to check first:

- **`devvit.yaml`**: If your project still has a `devvit.yaml`, replace it with a `devvit.json`. See [Migrating Blocks/Mod Tools to Devvit Web](./migrate/devvit-singleton.md) for the updated config format and steps.
- **`Devvit.addCustomPostType()`**: This is the core Blocks API and is deprecated. Move your post rendering to a `client` entry in `devvit.json`, backed by a standard HTML, React, or other web app.
- **`submitCustomPost()` with `preview`**: The `preview` field (used to render a Blocks component as the post preview) is no longer the right pattern. Use `post.entrypoints` in `devvit.json` to define your inline and expanded views as HTML entry points instead.
- **`useWebView`**: If your app launched a web view from inside Blocks, migrate to Devvit Web. See [Migrating from useWebView to Devvit Web](./migrate/inline-web-view.md).

If your app uses only Blocks without a web view, [Migrating Blocks/Mod Tools to Devvit Web](./migrate/devvit-singleton.md) is the quickest path. If your app has a web view, start with [Migrating from useWebView to Devvit Web](./migrate/inline-web-view.md).

</details>

<span id="where-do-i-customize-the-first-screen-or-launch-screen"></span>
<details>
<summary>Where do I customize the first screen or launch screen?</summary>

For current Devvit Web apps, customize the first screen through your `post.entrypoints` in `devvit.json` and the HTML, CSS, and client code for those entry files. The main references are [Launch overview](../capabilities/server/launch_screen_and_entry_points/launch_overview.mdx), [View modes and entry points](../capabilities/server/launch_screen_and_entry_points/view_modes_entry_points.md), and [Launch screen customization](../capabilities/server/launch_screen_and_entry_points/launch_screen_customization.md).

</details>

<span id="should-i-use-the-legacy-splash-field-or-html-launch-entry-points"></span>
<details>
<summary>Should I use the legacy <code>splash</code> field or HTML launch entry points?</summary>

:::warning
**Deprecation notice**: The `splash` parameter in `submitCustomPost()` and Blocks-based launch screens will be deprecated in June. Migrate to HTML-based entry points before then.
:::

Use HTML launch entry points for all new and existing work. The older `splash` parameter is deprecated in favor of entrypoint-based launch screens and `entry` selection in `submitCustomPost()`. If you're updating an older app, start with [Migrating from Splash Screens](../capabilities/server/launch_screen_and_entry_points/splash_migration.mdx).

</details>

<span id="how-do-i-handle-scrolling-and-touch-gestures-in-inline-vs-expanded-mode"></span>
<details>
<summary>How do I handle scrolling and touch gestures in inline vs expanded mode?</summary>

Treat inline and expanded mode differently. Inline should avoid scroll traps and heavy gesture hijacking so users can still scroll past the post, while expanded is the right place for richer touch interaction and more space.

</details>

<span id="how-do-i-add-images-that-ship-with-my-app"></span>
<details>
<summary>How do I add images that ship with my app?</summary>

Put static images in your client `dist/` directory when they should ship with the app version, such as logos, backgrounds, or other bundled art. Reference them directly from your web client (for example via `<img src="/logo.png" />`).

</details>

<span id="how-do-user-image-uploads-work-in-devvit"></span>
<details>
<summary>How do user image uploads work in Devvit?</summary>

The simplest path is a form field with `type: 'image'`, which returns a Reddit-hosted image URL when the user submits it. For custom flows like screenshots or generated images, send the data to your server and upload it with [Media uploads](../capabilities/server/media-uploads.mdx).

See [Forms](../capabilities/client/forms.mdx) and [Media uploads](../capabilities/server/media-uploads.mdx) for the supported formats and size limits.

</details>

<span id="why-do-image-uploads-over-10-mb-fail-if-the-limit-is-20-mb"></span>
<details>
<summary>Why do image uploads over 10 MB fail if the limit is 20 MB?</summary>

Media uploads have both a 20 MB maximum upload size and a 30-second timeout. Files close to 10 MB or larger can still fail on slower networks if the upload does not finish before the timeout.

Try compressing the image, reducing dimensions, or retrying from a faster connection.

</details>

<span id="what-image-urls-can-i-use-in-a-devvit-app"></span>
<details>
<summary>What image URLs can I use in a Devvit app?</summary>

The documented display paths are bundled client assets, Reddit-hosted URLs, and SVG data URLs, depending on the UI surface. If your source image lives somewhere else on the web, don't assume you can hotlink it directly into the UI. Upload it first so Reddit hosts the image, then use the returned URL. See [Media uploads](../capabilities/server/media-uploads.mdx).

</details>

<span id="what-is-postdata-and-when-should-i-use-it-instead-of-redis"></span>
<details>
<summary>What is <code>postData</code>, and when should I use it instead of Redis?</summary>

Use `postData` for small shared JSON attached to a single post, like lightweight game state or configuration that all viewers need to read. The docs cap it at 2 KB per post and recommend [Redis](../capabilities/server/redis.mdx) for larger or more persistent data patterns.

</details>

<span id="how-do-i-access-or-update-postdata"></span>
<details>
<summary>How do I access or update <code>postData</code>?</summary>

Set `postData` when creating the post, then read it from `context.postData` on either the client or server side. To update it later, fetch the post and call `setPostData()`. The important gotcha is that `setPostData()` replaces the whole object, so merge existing fields first. See [Post data](../capabilities/server/post-data.mdx).

</details>

<span id="how-do-i-build-a-leaderboard-with-redis"></span>
<details>
<summary>How do I build a leaderboard with Redis?</summary>

The standard Devvit pattern is to build leaderboards with Redis sorted sets. Use [Redis](../capabilities/server/redis.mdx) for score storage and ranking, use [Scheduler](../capabilities/server/scheduler.mdx) for daily or periodic resets, and prefer realtime updates over constant polling when you need a live leaderboard.

Redis is the right storage layer, but the exact schema depends on whether you need daily, weekly, or all-time rankings. [Redis](../capabilities/server/redis.mdx) is the best starting point.

</details>

<span id="can-a-menu-action-create-a-new-post"></span>
<details>
<summary>Can a menu action create a new post?</summary>

Yes. Define the menu item in `devvit.json`, implement the server endpoint it calls, and create the post from that route. The pattern is documented across [Menu actions](../capabilities/client/menu-actions.mdx) and [Interactive posts overview](../capabilities/interactive-posts/interactive_posts_overview.mdx).

</details>

<span id="how-do-i-automate-daily-or-scheduled-game-posts"></span>
<details>
<summary>How do I automate daily or scheduled game posts?</summary>

Use [Scheduler](../capabilities/server/scheduler.mdx) for cron-style recurring jobs or one-off jobs declared in `devvit.json`, then handle the matching `/internal/...` endpoint in your server code. The scheduler docs explain the plumbing; the post creation step still uses the normal Reddit APIs like `submitCustomPost()`.

</details>

<span id="how-do-i-post-or-comment-as-the-user-instead-of-the-app"></span>
<details>
<summary>How do I post or comment as the user instead of the app?</summary>

Add the required `permissions.reddit.asUser` entries in `devvit.json`, then call the supported Reddit APIs with `runAs: 'USER'`. The main doc for this is [User Actions](../capabilities/server/userActions.mdx), which also explains the review requirements, explicit opt-in rules, and `userGeneratedContent` expectations.

</details>

<span id="why-does-runas-user-still-post-as-the-app-during-playtest"></span>
<details>
<summary>Why does <code>runAs: 'USER'</code> still post as the app during playtest?</summary>

Before the app version is approved, user actions aren't enabled for everyone. During playtest or other unapproved versions, `runAs: 'USER'` falls back to the app account for most users, while actions taken by the app owner are attributed to the owner's username. After publishing and approval, it operates on behalf of the user for all users. See [User Actions](../capabilities/server/userActions.mdx).

</details>

<span id="how-do-i-set-or-update-user-flair-and-post-flair"></span>
<details>
<summary>How do I set or update user flair and post flair?</summary>

Devvit supports both user flair and post flair through the Reddit API client.

- For a new post, use the submit options documented in [CommonSubmitPostOptions](../api/redditapi/models/type-aliases/CommonSubmitPostOptions.md), including `flairId` or `flairText`.
- For an existing post, use the flair methods on [RedditAPIClient](../api/redditapi/RedditAPIClient/classes/RedditAPIClient.md), such as `setPostFlair()` and `removePostFlair()`.
- For a user, use `setUserFlair()`, `removeUserFlair()`, or `setUserFlairBatch()` on the same client.

If you're reading flair back from a post, note that post flair and author flair are different fields. The [Post](../api/redditapi/models/classes/Post.md) model exposes `flair` for the post and `authorFlair` for the post author.

If you need to react to flair changes, Devvit documents an [`onPostFlairUpdate`](../capabilities/server/triggers.mdx) trigger for post flair changes. Also note that the [Devvit test tool](./tools/devvit_test.mdx) doesn't yet support the Flair service.

</details>

<span id="how-do-i-get-a-users-username-or-snoovatar"></span>
<details>
<summary>How do I get a user's username or snoovatar?</summary>

If you only need the current user's name, prefer `getCurrentUsername()` over fetching the full user object.

If you need more profile information, use `getCurrentUser()` from the [Reddit API client](../api/redditapi/RedditAPIClient/classes/RedditAPIClient.md). To get a snoovatar URL, use `reddit.getSnoovatarUrl(username)` or `user.getSnoovatarUrl()` on the [User](../api/redditapi/models/classes/User.md) model.

Some handlers also expose experimental identity fields like `username` and `snoovatar` on [BaseContext](../api/public-api/type-aliases/BaseContext.md), but the Reddit client methods are the clearest documented path.

</details>

<span id="how-do-i-handle-external-links-in-devvit"></span>
<details>
<summary>How do I handle external links in Devvit?</summary>

Use Devvit navigation APIs to open links rather than treating this like external fetch. For app navigation, see [Navigation](../capabilities/client/navigation.mdx), which covers `navigateTo` and the confirmation flow for external URLs.

If you actually need remote data or remote media, that's a different path: use [HTTP fetch](../capabilities/server/http-fetch.mdx) for approved server-side fetches, and [Media uploads](../capabilities/server/media-uploads.mdx) when you need a Reddit-hosted media URL.

</details>

<span id="how do I update my app profile settings"></span>
<details>
<summary>How do I update my app profile settings?</summary>

App profile settings let you control how your app appears on Reddit via a combination of configuration in `devvit.json` and fields in the Developer Portal.

**Avatar (profile icon)**
To update your avatar:

1. In your `devvit.json`, set the `marketingAssets.icon` field to the path to your icon from the project root.
2. When you publish your app and it is approved, this icon is uploaded to your app’s Reddit profile.
3. To change the icon later, update `marketingAssets.icon` in `devvit.json` and submit the app for a new review.
4. Only image avatars are supported at this time. Snoovatars are not supported for apps.

You can also edit the display name, about description, and mature flag (18+) fields in the Developer Portal under Developer Settings. Updates will appear in the Developer Portal and on the app's Reddit profile.

</details>

### Limits and Policies

<span id="what-are-the-main-storage-payload-and-rate-limits"></span>
<details>
<summary>What are the main storage, payload, and rate limits?</summary>

There's no single limits page today, but these are the most commonly referenced numbers in the docs:

- [Redis](../capabilities/server/redis.mdx): 5 GB max storage per installation, 5 MB max request size, and 40,000 max commands per second.
- [Devvit Web](../capabilities/devvit-web/devvit_web_overview.mdx): 30 second max request time, 4 MB max payload size, and 10 MB max response size.
- [Post data](../capabilities/server/post-data.mdx): 2 KB per post.
- [Settings and secrets](../capabilities/server/settings-and-secrets.mdx): 2 KB per setting value.
- [Realtime](../capabilities/realtime/overview.md): 1 MB maximum message payload and 100 messages per second per installation.
- [Scheduler](../capabilities/server/scheduler.mdx): up to 10 live recurring actions per installation, plus `runJob()` limits documented on that page.

If you need data to survive app updates, don't rely on browser `localStorage`. The [Devvit Web overview](../capabilities/devvit-web/devvit_web_overview.mdx) recommends Redis for persistent storage across versions.

</details>

<span id="how-long-does-it-take-to-get-my-domain-approved"></span>
<details>
<summary>How long does it take to get my domain approved?</summary>

Domain requests are reviewed separately from app publishing. Most domain requests are reviewed within **1–2 business days**, though requests with policy ambiguity may take longer. If your app was approved but a requested fetch domain wasn't yet granted, the domain review may still be in progress.

To make approval go smoothly:

- Use exact hostnames only — no wildcards (`*.example.com`), no protocols (`https://`), and no paths (`api.example.com/webhooks`).
- Add a "Fetch Domains" section to your app [`README.md`](../devvit_rules.md#app-readme-requirements) listing each domain and explaining why you need it. The expected format is documented in [HTTP Fetch](../capabilities/http-fetch.md).
- Include links to your Terms and Conditions and Privacy Policy in your app details form.

Before submitting, check the [global fetch allowlist](../capabilities/http-fetch.md#global-fetch-allowlist) — if your domain is already listed there, no separate request is needed. Personal domains (e.g., `personaldomain.com`) aren't approved.

</details>

<span id="what-screen-sizes-should-i-design-for"></span>
<details>
<summary>What screen sizes should I design for?</summary>

There's no single published pixel size for every device or view mode. Build responsive layouts and test them across the views supported by the [UI Simulator](./tools/ui_simulator.mdx): mobile, desktop, and fullscreen.

Inline and expanded mode behave differently: expanded is the larger experience, with more room for rich interaction, while inline should stay lightweight and feed-friendly.

Start with mobile-first assumptions and validate in the simulator before hard-coding dimensions. The best references are [View modes and entry points](../capabilities/server/launch_screen_and_entry_points/view_modes_entry_points.md), [Launch screen customization](../capabilities/server/launch_screen_and_entry_points/launch_screen_customization.md), and [UI Simulator](./tools/ui_simulator.mdx).

</details>

<span id="can-i-build-nsfw-games-or-apps-with-devvit"></span>
<details>
<summary>Can I build NSFW games or apps with Devvit?</summary>

There's no separate NSFW platform guide in these docs, so the main source of truth is [Devvit Rules](../devvit_rules.md) plus Reddit's linked platform policies.

The rules explicitly require labels or age-gating before exposing users to graphic, sexually explicit, or otherwise mature content. Static assets and uploaded media are also subject to the same safety checks and policy review described in [Media uploads](../capabilities/server/media-uploads.mdx).

If your app idea depends on adult content or NSFW communities, review those rules first and get clarification in the [Devvit Discord](https://developers.reddit.com/discord) before you ship.

</details>

### Help and Next Steps

<span id="where-do-i-go-for-help-if-i-am-stuck"></span>
<details>
<summary>Where do I go for help if I am stuck?</summary>

For help from the Devvit team and community:

- Join the [Devvit Discord](https://developers.reddit.com/discord)
- Ask in [`r/Devvit`](https://www.reddit.com/r/Devvit)
- File bugs or feature requests in the [public issues tracker](https://github.com/reddit/devvit/issues)

</details>

<span id="how-do-i-uninstall-or-remove-a-devvit-app-from-a-subreddit"></span>
<details>
<summary>How do I uninstall or remove a Devvit app from a subreddit?</summary>

Use the CLI to inspect installs and uninstall from a subreddit. The current docs point to `list installs` and `uninstall` in [Devvit CLI](./tools/devvit_cli.mdx).

There's also a manual path in the [App Directory](https://developers.reddit.com/apps/). Open your app there, then either use **Installed in communities** to select a subreddit and choose **Remove from community**, or scroll to the bottom of the app page and use **Archive** if you want to archive the app itself.

Be careful: uninstalling from a subreddit can remove that installation's stored data and settings. See [Mod resources](./best-practices/mod_resources.md) for the current warning about uninstall data loss.

</details>

<span id="what-is-devvit-mcp-and-how-do-i-set-it-up"></span>
<details>
<summary>What is Devvit MCP and how do I set it up?</summary>

Devvit MCP is the bridge used by supported coding tools and agents to search Devvit docs and, in some setups, work with Devvit workflows from your editor. The setup docs live in [Using AI Tools](./ai/ai.md).

If you're configuring Cursor, VS Code Copilot, Claude Code, or Claude Desktop, start there instead of duplicating the JSON in this FAQ. Use the AI tools guide for the exact MCP config and supported tools.

</details>

<span id="what-should-i-read-next"></span>
<details>
<summary>What should I read next?</summary>

- To understand Devvit's built-in Reddit access, read the [Reddit API Overview](../capabilities/server/reddit-api.mdx)
- To learn the CLI commands you'll use most often, read [Devvit CLI](./tools/devvit_cli.mdx)
- To develop against a subreddit and inspect logs, read [Playtest](./tools/playtest.md) and [Logs and Debugging](./tools/logs.md)

</details>

</div>
